[gd_scene load_steps=14 format=3 uid="uid://e5n5ff0onet5"]

[ext_resource type="Script" path="res://Scripts/Classes/Enemies/rex.gd" id="1_b7e1s"]
[ext_resource type="Texture2D" uid="uid://bvece5pas0vsw" path="res://Assets/Sprites/Enemys/RexSheet.png" id="2_dj0gb"]
[ext_resource type="Script" path="res://Scripts/Classes/water_bouyancy.gd" id="3_lc1px"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kmnjk"]
atlas = ExtResource("2_dj0gb")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyhbg"]
atlas = ExtResource("2_dj0gb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm2l8"]
atlas = ExtResource("2_dj0gb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dineb"]
atlas = ExtResource("2_dj0gb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf62j"]
atlas = ExtResource("2_dj0gb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_es2of"]
atlas = ExtResource("2_dj0gb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjk23"]
atlas = ExtResource("2_dj0gb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a7ykr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmnjk")
}],
"loop": true,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyhbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm2l8")
}],
"loop": true,
"name": &"Normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dineb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf62j")
}],
"loop": true,
"name": &"Small",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_es2of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjk23")
}],
"loop": false,
"name": &"Transition",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p3eb5"]
size = Vector2(12.2727, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nh1h3"]
size = Vector2(12.2727, 10)

[node name="Rex" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 12
floor_constant_speed = true
floor_max_angle = 1.55334
script = ExtResource("1_b7e1s")
yoshi_behavior = "Swallow"
ice_size = Vector2(1.25, 2)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_a7ykr")
animation = &"Normal"
autoplay = "Normal"
offset = Vector2(0, 1)

[node name="NormalCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_p3eb5")

[node name="SmallCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_nh1h3")

[node name="NormalHitbox" type="Area2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(1.1, 1.1)

[node name="NormalCollision" type="CollisionShape2D" parent="NormalHitbox"]
shape = SubResource("RectangleShape2D_p3eb5")

[node name="SmallHitbox" type="Area2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(1.1, 1.1)
monitorable = false

[node name="SmallCollision" type="CollisionShape2D" parent="SmallHitbox"]
position = Vector2(0, 1.19209e-07)
shape = SubResource("RectangleShape2D_nh1h3")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(0, -15)
scale = Vector2(1, 1.6)

[node name="WaterBouyancy" type="Node" parent="." node_paths=PackedStringArray("hitbox")]
script = ExtResource("3_lc1px")
hitbox = NodePath("../SmallHitbox")

[connection signal="area_entered" from="NormalHitbox" to="." method="check_hit"]
[connection signal="area_entered" from="SmallHitbox" to="." method="check_hit"]
